--- a/source/styles/blocks/pagination.scss
+++ b/source/styles/blocks/pagination.scss
@@ -1,1 +1,50 @@
 //
+.pagination {
+  padding-top: 44px;
+}
+
+.pagination__list {
+  @include list-base;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: space-between;
+}
+
+.pagination__link {
+  @include font-info(16px, 24px);
+  display: block;
+  padding: 8px;
+  min-height: 40px;
+  min-width: 40px;
+  text-align: center;
+  text-decoration: none;
+  background-color: $base-color-4;
+  color: $base-color-1;
+  cursor: pointer;
+  border-radius: 4px;
+
+  &:hover,
+  &:focus {
+    color: $base-color-4;
+    background-color: $alternate-color-1;
+  }
+
+  &:active {
+    background-color: $alternate-color-2;
+  }
+
+  &:disabled {
+    background-color: $alternate-color-4;
+  }
+}
+
+.pagination__link--active {
+  color: $base-color-3;
+  font-weight: 600;
+  background-color: $background-color-transparent;
+}
+
+.pagination__link-button {
+  display: none;
+}
