--- a/source/styles/blocks/card.scss
+++ b/source/styles/blocks/card.scss
@@ -53,6 +53,6 @@
     left: 20px;
     width: 20px;
     height: 16px;
-    background: url("../../icons/cart-icon.svg") no-repeat center;
+    background: url("../../icons/cart-plus-icon.svg") no-repeat center;
   }
 }
