--- a/source/styles/blocks/activites.scss
+++ b/source/styles/blocks/activites.scss
@@ -12,13 +12,30 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 60px;
+  height: 60px;
 
-  @include mobile {
+  @include tablet {
     width: 60px;
-    height: 60px;
+    height: 80px;
+    padding: 32px 22px;
+  }
+
+  @include desktop {
+    width: auto;
+    height: auto;
+    display: flex;
+    gap: 8px;
   }
 }
 
 .activities__item-title {
   display: none;
+
+  @include desktop {
+    @include font-info(12px, 16px, 500);
+    display: block;
+    text-transform: uppercase;
+    letter-spacing: 0.02em;
+  }
 }
