--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -13,9 +13,10 @@
 .header__logo {
   text-decoration: none;
   cursor: pointer;
+  margin-right: auto;
 
-  @include mobile {
-    margin-right: auto;
+  @include desktop {
+    margin-right: 20px;
   }
 
   &:hover {
@@ -35,4 +36,9 @@
   @include font-info(12px, 16px);
   display: none;
   margin: 0;
+
+  @include desktop {
+    display: block;
+    max-width: 150px;
+  }
 }
