--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -49,6 +49,10 @@
   width: 60px;
   height: 60px;
   margin-right: -20px;
+
+  @include tablet {
+    display: none;
+  }
 }
 
 .main-nav--closed ~ .main-nav__toggle::before {
