--- a/source/styles/blocks/navigation-topic.scss
+++ b/source/styles/blocks/navigation-topic.scss
@@ -1,22 +1,23 @@
 //
 .navigation-topic {
   padding-top: 6px;
+  margin-bottom: 27px;
 
-  @include mobile {
-    margin-bottom: 27px;
+  @include tablet {
+    margin-bottom: 6px;
   }
 }
 
 .navigation-topic__title {
   @include font-info(14px, 20px, 700);
   color: $base-color-1;
-
   letter-spacing: 0.02em;
   margin: 0;
   margin-bottom: 2px;
+  padding: 15px 0;
 
-  @include mobile {
-    padding: 15px 0;
+  @include tablet {
+    padding: 4px 0;
   }
 }
 
@@ -24,8 +25,38 @@
   @include list-base;
   position: relative;
   margin-bottom: 27px;
+
+  @include tablet {
+    margin-bottom: 0;
+    margin-top: 13px;
+  }
 }
 
 .navigation-topic__item {
   margin-bottom: 16px;
+
+  @include desktop {
+    &:last-child {
+      margin-bottom: 5px;
+    }
+  }
+}
+
+.navigation-topic__item-link {
+  @include font-info(12px, 16px, 500);
+  position: relative;
+  color: $base-color-3;
+  text-decoration: none;
+  text-transform: uppercase;
+  cursor: pointer;
+  letter-spacing: 0.02em;
+
+  &:hover,
+  &:focus {
+    color: $alternate-color-1;
+  }
+
+  &:active {
+    color: $alternate-color-2;
+  }
 }
