--- a/source/styles/blocks/social.scss
+++ b/source/styles/blocks/social.scss
@@ -8,6 +8,10 @@
   align-items: center;
   padding: 0 0 18px;
   justify-content: flex-end;
+
+  @include desktop {
+    justify-content: flex-start;
+  }
 }
 
 .social__link {
