added slider styles and added js

--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -23,6 +23,7 @@
 @import "./blocks/advantages.scss";
 // Каталог
 @import "./blocks/form.scss"; // Форма
+@import "./blocks/no-ui-slider.scss"; // слайдер
 @import "./blocks/catalog.scss"; // Каталог
 @import "./blocks/card.scss"; // Карточки товаров
 @import "./blocks/pagination.scss"; //Пагинация
