--- a/source/styles/blocks/activites.scss
+++ b/source/styles/blocks/activites.scss
@@ -3,6 +3,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: end;
+
+  @include desktop {
+    gap: 15px;
+    margin-left: 30px;
+  }
 }
 
 .activities__link {
@@ -12,8 +17,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 60px;
-  height: 60px;
+
+  @include mobile {
+    width: 60px;
+    height: 60px;
+  }
 
   @include tablet {
     width: 60px;
